firmware/lib/control-table/tests/ui/section_size_mismatch.stderr
error[E0080]: evaluation panicked: Section struct size does not equal its declared section budget; add an explicit `_rsvd` tail array to fill the section budget
  --> tests/ui/section_size_mismatch.rs:10:10
   |
10 | #[derive(Section)]
   |          ^^^^^^^ evaluation of `_` failed here
